tests/purs/failing/Row1Shared2MissingLabels.out
Error found:
in module [33mRow1Shared2MissingLabels[0m
at tests/purs/failing/Row1Shared2MissingLabels.purs:10:32 - 10:41 (line 10, column 32 - line 10, column 41)

  Could not match type
  [33m                 [0m
  [33m  ( zOnly :: Char[0m
  [33m  ...            [0m
  [33m  )              [0m
  [33m                 [0m
  with type
  [33m                   [0m
  [33m  ( qOnly :: String[0m
  [33m  ...              [0m
  [33m  )                [0m
  [33m                   [0m

while trying to match type [33m{ shared :: Int[0m
                           [33m, zOnly :: Char[0m
                           [33m}              [0m
  with type [33m{ qOnly :: String[0m
            [33m, shared :: Int  [0m
            [33m}                [0m
while checking that expression [33m(Tuple z) q[0m
  has type [33mTuple              [0m
           [33m  { qOnly :: String[0m
           [33m  , shared :: Int  [0m
           [33m  }                [0m
           [33m  { shared :: Int  [0m
           [33m  , zOnly :: Char  [0m
           [33m  }                [0m
in binding group doStuff

See https://github.com/purescript/documentation/blob/master/errors/TypesDoNotUnify.md for more information,
or to contribute content related to this error.

